--- a/po/et.po
+++ b/po/et.po
@@ -1358,15 +1358,13 @@ msgid "Choose the location for crash and debuglogs."
 msgstr "Vali vea- ja silumislogide jaoks asukoht."
 
 msgid ""
-"Choose the location where the EPG data will be stored when the GigaBlue HD "
-"800 Solo is shut down. The location must be available at boot time."
+"Choose the location where the EPG data will be stored when the STB_BOX is shut down. The location must be available at boot time."
 msgstr ""
 "Vali asukoht, kuhu STB_BOX välja lülitamisel EPG andmed salvestatakse. "
 "Asukoht peab olema kättesaadav algkäivitusel."
 
 msgid ""
-"Choose the name of the file that holds the EPG data when the GigaBlue HD 800 "
-"Solo is shut down. This can be handy to differentiate between several boxes."
+"Choose the name of the file that holds the EPG data when the STB_BOX is shut down. This can be handy to differentiate between several boxes."
 msgstr ""
 "Otsusta, mis nimega EPG fail STB_BOX välja lülitamisel salvestatakse. Nii on "
 "mugav eristada mitme eri vastuvõtja faile."
@@ -7108,8 +7106,7 @@ msgid ""
 "If you already have a prepared bootable USB stick, please insert it now. "
 "Otherwise plug in a USB stick with a minimum size of 64 MB!"
 msgstr ""
-"See laiendus valmistab ette USB pulga, mida saab kasutada GigaBlue HD 800 "
-"Solo tarkvara uuendamiseks ilma võrgu- või WLAN ühenduseta. \n"
+"See laiendus valmistab ette USB pulga, mida saab kasutada STB_BOX tarkvara uuendamiseks ilma võrgu- või WLAN ühenduseta. \n"
 "Algul tuleb USB pulk teha alglaetavaks. \n"
 "Siis saab uuenduste serverist alla laadida NFI tarkvara faili ja salvestada "
 "selle USB pulgale. \n"
@@ -7973,7 +7970,7 @@ msgid ""
 "Welcome.\n"
 "\n"
 "If you want to connect your STB_BOX to the Internet, this wizard will guide "
-"you through the basic network setup of your GigaBlue HD 800 Solo.\n"
+"you through the basic network setup of your STB_BOX.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -7987,8 +7984,7 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"This start wizard will guide you through the basic setup of your GigaBlue HD "
-"800 Solo.\n"
+"This start wizard will guide you through the basic setup of your STB_BOX.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
 "Tere.\n"
