--- a/po/nl.po
+++ b/po/nl.po
@@ -6857,8 +6857,7 @@ msgid ""
 "create a STB_BOX format data DVD (which will not play in stand-alone DVD "
 "players) instead?"
 msgstr ""
-"De DVD standaard ondersteunt geen H.264 (HDTV) video. Wil je een GigaBlue HD "
-"800 Solo formaat data DVD maken (deze speelt niet af in een DVD speler) ?"
+"De DVD standaard ondersteunt geen H.264 (HDTV) video. Wil je een STB_BOX formaat data DVD maken (deze speelt niet af in een DVD speler) ?"
 
 msgid ""
 "The EPGSearch plugin is not installed!\n"
@@ -10162,48 +10161,3 @@ msgstr "zap"
 
 msgid "zapped"
 msgstr "zapte"
-
-#~ msgid ""
-#~ "Choose the location where the EPG data will be stored when the GigaBlue "
-#~ "HD 800 Solo is shut down. The location must be available at boot time."
-#~ msgstr ""
-#~ "Hier kunt u instellen waar de EPG data bewaard wordt als uw GigaBlue HD "
-#~ "800 Solo volledig is uitgeschakeld. De gewenste locatie moet beschikbaar "
-#~ "zijn op het moment dat uw STB_BOX opstart."
-
-#~ msgid ""
-#~ "Choose the name of the file that holds the EPG data when the GigaBlue HD "
-#~ "800 Solo is shut down. This can be handy to differentiate between several "
-#~ "boxes."
-#~ msgstr ""
-#~ "Kies de naam van het bestand dat de opgeslagen EPG data bevat. Als u "
-#~ "meerdere ontvangers heeft, kan het handig zijn verschillende namen te "
-#~ "gebruiken."
-
-#~ msgid ""
-#~ "Welcome.\n"
-#~ "\n"
-#~ "If you want to connect your STB_BOX to the Internet, this wizard will "
-#~ "guide you through the basic network setup of your GigaBlue HD 800 Solo.\n"
-#~ "\n"
-#~ "Press OK to start configuring your network"
-#~ msgstr ""
-#~ "Welkom.\n"
-#~ "\n"
-#~ "Om uw STB_BOX met het internet te verbinden, leidt deze wizard u door de "
-#~ "basisiinstellingen.\n"
-#~ "\n"
-#~ "Druk op OK om te beginnen met het configureren van uw netwerk."
-
-#~ msgid ""
-#~ "Welcome.\n"
-#~ "\n"
-#~ "This start wizard will guide you through the basic setup of your GigaBlue "
-#~ "HD 800 Solo.\n"
-#~ "Press the OK button on your remote control to move to the next step."
-#~ msgstr ""
-#~ "Welkom.\n"
-#~ "\n"
-#~ "Deze start-wizard zal u door de basis instellingen van uw GigaBlue HD 800 "
-#~ "Solo leiden.\n"
-#~ "Druk op 'OK' op uw afstandsbediening om naar de volgende stap te gaan."
