--- a/po/cs.po
+++ b/po/cs.po
@@ -1639,16 +1639,14 @@ msgstr "Vyberte umístění pro zprávy pádů a chyb."
 
 #
 msgid ""
-"Choose the location where the EPG data will be stored when the GigaBlue HD "
-"800 Solo is shut down. The location must be available at boot time."
+"Choose the location where the EPG data will be stored when the STB_BOX is shut down. The location must be available at boot time."
 msgstr ""
 "Vyberte místo, kam se uloží EPG data, když je STB_BOX vypnuto.Umístění musí "
 "být k dispozici při bootu."
 
 #
 msgid ""
-"Choose the name of the file that holds the EPG data when the GigaBlue HD 800 "
-"Solo is shut down. This can be handy to differentiate between several boxes."
+"Choose the name of the file that holds the EPG data when the STB_BOX is shut down. This can be handy to differentiate between several boxes."
 msgstr ""
 "Vyberte název souboru, kam se uloží EPG data, když je STB_BOX vypnuto.To "
 "může být užitečné pro rozlišení mezi několika stb."
@@ -9902,7 +9900,7 @@ msgid ""
 "Welcome.\n"
 "\n"
 "If you want to connect your STB_BOX to the Internet, this wizard will guide "
-"you through the basic network setup of your GigaBlue HD 800 Solo.\n"
+"you through the basic network setup of your STB_BOX.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -9916,8 +9914,7 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"This start wizard will guide you through the basic setup of your GigaBlue HD "
-"800 Solo.\n"
+"This start wizard will guide you through the basic setup of your STB_BOX.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
 
