--- a/po/tr.po
+++ b/po/tr.po
@@ -1507,15 +1507,13 @@ msgid "Choose the location for crash and debuglogs."
 msgstr "Çökme ve hata ayıklama günlük konumunu seçin."
 
 msgid ""
-"Choose the location where the EPG data will be stored when the GigaBlue HD "
-"800 Solo is shut down. The location must be available at boot time."
+"Choose the location where the EPG data will be stored when the STB_BOX is shut down. The location must be available at boot time."
 msgstr ""
 "STB_BOX kapandığında EPG bilgisinin saklanacağı yeri seçin. Önyükleme "
 "sırasında konum hazır olmalıdır."
 
 msgid ""
-"Choose the name of the file that holds the EPG data when the GigaBlue HD 800 "
-"Solo is shut down. This can be handy to differentiate between several boxes."
+"Choose the name of the file that holds the EPG data when the STB_BOX is shut down. This can be handy to differentiate between several boxes."
 msgstr ""
 "STB_BOX kapandığında EPG bilgisinin saklanacağı dosya adını seçin. Birden "
 "çok alıcı kullanıldığında, faydalı olabilir."
@@ -8938,7 +8936,7 @@ msgid ""
 "Welcome.\n"
 "\n"
 "If you want to connect your STB_BOX to the Internet, this wizard will guide "
-"you through the basic network setup of your GigaBlue HD 800 Solo.\n"
+"you through the basic network setup of your STB_BOX.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -8952,8 +8950,7 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"This start wizard will guide you through the basic setup of your GigaBlue HD "
-"800 Solo.\n"
+"This start wizard will guide you through the basic setup of your STB_BOX.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
 
