[[translations] DE  fix typo.

--- a/po/da.po
+++ b/po/da.po
@@ -1,4 +1,3 @@
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
@@ -9022,7 +9021,7 @@ msgstr ""
 "Velkommen.\n"
 "\n"
 "Hvis du vil forbinde din STB_BOX til internettet, vil denne hjælper guide "
-"dig gennem den grundlæggende netværksopsætning af din GigaBlue HD 800 Solo.\n"
+"dig gennem den grundlæggende netværksopsætning af din STB_BOX.\n"
 "\n"
 "Tryk OK for at starte opsætningen af dit netværk"
 
