--- a/po/nl.po
+++ b/po/nl.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: ViX\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-04 11:30+0100\n"
-"PO-Revision-Date: 2012-10-04 19:55+0100\n"
+"PO-Revision-Date: 2012-10-05 14:00+0100\n"
 "Last-Translator: DeLaGrooV <delagroov@gmail.com>\n"
 "Language-Team: Andy Blackburn, Rob van der Does\n"
 "Language: Nederlands\n"
@@ -1266,7 +1266,7 @@ msgid "Channel:"
 msgstr "Zender:"
 
 msgid "ChannelEPG settings"
-msgstr "Adapter instellingen"
+msgstr "ZenderEPG instellingen"
 
 msgid "Channellist menu"
 msgstr "Zenderlijst menu"
@@ -1524,7 +1524,7 @@ msgid "Configure the contrast level of the front panel display."
 msgstr ""
 
 msgid "Configure the first audio language (highest priority)."
-msgstr ""
+msgstr "Kies audio taal 1 (hoogste proriteit)"
 
 msgid "Configure the first subtitle language (highest priority)."
 msgstr "Kies ondertitel taal 1 (hoogste proriteit)"
@@ -1536,13 +1536,13 @@ msgid "Configure the font size relative to skin size, so 1 increases by 1 point 
 msgstr ""
 
 msgid "Configure the fourth audio language."
-msgstr "Kies audio taal 1 (hoogste proriteit)"
+msgstr "Kies audio taal 4 "
 
 msgid "Configure the fourth subtitle language."
-msgstr "Kies ondertitel taal 2"
+msgstr "Kies ondertitel taal 4"
 
 msgid "Configure the gateway."
-msgstr "Gateway gebruiken"
+msgstr "Configureer uw gateway "
 
 msgid "Configure the harddisk to go to standby after a specified idle time."
 msgstr "Stel in na hoeveel tijd ongebruikt te zijn de harde schijf mag inslapen"
@@ -1551,19 +1551,19 @@ msgid "Configure the horizontal alignment of the subtitles."
 msgstr "Configureer de horizontale uitlijning van de ondertitels"
 
 msgid "Configure the latitude of your location."
-msgstr "Configureer uw interne netwerk"
+msgstr "Configureer de latitude van uw lokatie"
 
 msgid "Configure the longitude of your location."
-msgstr "Configureer uw interne netwerk"
+msgstr "Configureer de longitude van uw lokatie"
 
 msgid "Configure the minimum amount of disk space to be available for recordings. When the amount of space drops below this value, deleted items will be removed from the trash can."
 msgstr ""
 
 msgid "Configure the nameserver (DNS)."
-msgstr "voeg een nameserver toe"
+msgstr "Configureer uw nameserver (DNS)."
 
 msgid "Configure the netmask."
-msgstr "Configureer interface"
+msgstr "Configure the netmask."
 
 msgid "Configure the number of days after which items are automaticaly removed from the trash can."
 msgstr ""
@@ -1587,13 +1587,13 @@ msgid "Configure the primary EPG language."
 msgstr "Kies EPG taal 1"
 
 msgid "Configure the second audio language."
-msgstr "Kies audio taal 1 (hoogste proriteit)"
+msgstr "Kies audio taal 2"
 
 msgid "Configure the second subtitle language."
 msgstr "Kies ondertitel taal 2"
 
 msgid "Configure the secundary EPG language."
-msgstr "Kies EPG taal 1"
+msgstr "Kies EPG taal 2"
 
 msgid "Configure the skip time interval on the '1'/'3'-keys."
 msgstr ""
@@ -1614,16 +1614,16 @@ msgid "Configure the subtitle delay when timing information is not available."
 msgstr "Stel de vertraging van de ondertitels in voor het geval tijdsinformatie niet beschikbaar is."
 
 msgid "Configure the third audio language."
-msgstr "Kies audio taal 1 (hoogste proriteit)"
+msgstr "Kies audio taal 3"
 
 msgid "Configure the third subtitle language."
-msgstr "Kies ondertitel taal 2"
+msgstr "Kies ondertitel taal 3"
 
 msgid "Configure the transparency of the black background of graphical DVB subtitles."
 msgstr "Stel de mate van transparantie in van de zwarte achtergrond van grafische DVB-ondertitels."
 
 msgid "Configure the tuner mode."
-msgstr "Kies de tuner die u in wilt stellen."
+msgstr "Configure the tuner mode."
 
 msgid "Configure the type of status indication icons shown in the movielist."
 msgstr "Geef aan welk type iconen moet worden gebruikt in de opnamelijst"
@@ -1756,12 +1756,13 @@ msgstr "Kon geen beeld-in-beeld weergeven"
 msgid "Could not open the file %s!"
 msgstr "Kon het bestand %s niet openen!"
 
+#, python-format
 msgid "Could not record due to conflicting timer %s"
-msgstr "Opnametijd beperkt vanwege conflicterende timer %s"
+msgstr "Opname niet mogelijk vanwege conflicterende timer %s"
 
 #, python-format
 msgid "Could not record due to invalid service %s"
-msgstr ""
+msgstr "Opname niet mogelijk vanwege ongeldige service %s"
 
 #, python-format
 msgid "Could not save configfile %s!"
@@ -2544,7 +2545,7 @@ msgid "Event Info"
 msgstr "Event Info..."
 
 msgid "Event font size"
-msgstr "Ondertitel lettergrootte"
+msgstr "Event lettergrootte"
 
 msgid "Eventview"
 msgstr "Programmaoverzicht"
@@ -2907,7 +2908,7 @@ msgid "Graphical Multi EPG"
 msgstr "Grafische Multi EPG"
 
 msgid "GraphicalEPG settings"
-msgstr "Adapter instellingen"
+msgstr "Grafische EPG instellingen"
 
 msgid "Graphics"
 msgstr "Grafisch"
@@ -3179,7 +3180,7 @@ msgid "Infobar EPG"
 msgstr "informatiebalk EPG..."
 
 msgid "InfobarEPG settings"
-msgstr "Adapter instellingen"
+msgstr "InfobarEPG instellingen"
 
 msgid "Information"
 msgstr "Informatie"
@@ -3496,7 +3497,7 @@ msgid "Linked titles with a DVD menu"
 msgstr "Verbind titels met een DVD menu"
 
 msgid "List EPG functions..."
-msgstr "Sorteer EPG-lijst"
+msgstr "List EPG functions..."
 
 msgid "List available networks"
 msgstr "Lijst met beschikbare netwerken"
@@ -3632,7 +3633,7 @@ msgid "Margin after record"
 msgstr "Marge na afloop opname (minuten)"
 
 msgid "Margin after record (minutes)"
-msgstr "Marge voor opname (minuten)"
+msgstr "Marge na opname (minuten)"
 
 msgid "Margin before record (minutes)"
 msgstr "Marge voor opname (minuten)"
@@ -3807,7 +3808,7 @@ msgid "Multi EPG"
 msgstr "Multi EPG"
 
 msgid "MultiEPG settings"
-msgstr "Adapter instellingen"
+msgstr "MultiEPG instellingen"
 
 msgid "Multimedia"
 msgstr "Multimedia"
@@ -4281,10 +4282,10 @@ msgid "Only extensions."
 msgstr "Alleen extensions"
 
 msgid "Open satellites list"
-msgstr "Kanaallijst preview"
+msgstr "Open satellites list"
 
 msgid "Open service list"
-msgstr "Kanaallijst service modus*"
+msgstr "Open service list"
 
 msgid "Open service list and select next channel"
 msgstr ""
@@ -4293,7 +4294,7 @@ msgid "Open service list and select previous channel"
 msgstr ""
 
 msgid "Open the movie list"
-msgstr "Opnamelijst instellingen"
+msgstr "Open Opnamelijst"
 
 msgid "OpenVPN setup"
 msgstr "OpenVPN instellingen"
@@ -4403,7 +4404,7 @@ msgid "Pause movie at end"
 msgstr "Pauzeer afspelen aan het einde"
 
 msgid "Pause playback"
-msgstr "Afspelen wordt hervat"
+msgstr "Pause playback"
 
 msgid "Peak load (max queued requests per workerthread)"
 msgstr "Piek belasting (max rij verzoeken per workerthread)"
@@ -5126,7 +5127,7 @@ msgid "Remove a mark"
 msgstr "Verwijder een markeerpunt"
 
 msgid "Remove completed timers after (days)"
-msgstr "Verwijder uit prullenbak na (dagen)"
+msgstr "Verwijder voltoiide timers na (dagen)"
 
 msgid "Remove currently selected title"
 msgstr "De momenteel geselecteerde titel verwijderen"
@@ -5469,7 +5470,7 @@ msgid "Search for similar events"
 msgstr "Zoek soortgelijke events"
 
 msgid "Search the epg for current event."
-msgstr "IMDB zoekslag naar huidig event"
+msgstr "Doorzoek de epg voor huidig event."
 
 msgid "Search west"
 msgstr "Zoek west"
@@ -5668,7 +5669,7 @@ msgid "Service Title mode"
 msgstr "Alleen kanaalnaam"
 
 msgid "Service font size"
-msgstr "Kanaalinfo lettergrootte"
+msgstr "Service font size"
 
 msgid "Service has been added to the favourites."
 msgstr "De zender is toegevoegd aan de favorieten."
@@ -5870,7 +5871,7 @@ msgid "Setup menu"
 msgstr "Instellingenmenu"
 
 msgid "Setup mode"
-msgstr "Menu modus"
+msgstr "Setup mode"
 
 msgid "Setup the interval to check for online updates. (in hours)"
 msgstr "Hier stelt u het tijdsinterval in waarmee uw STB_BOX naar updates zoekt (in uren; '0' betekent dat er niet gezocht wordt)."
@@ -6020,7 +6021,7 @@ msgid "Show event-progress in channel selection"
 msgstr "Toon event-vooruitgang in zender keuze"
 
 msgid "Show extensions..."
-msgstr "Toon CCcam in extensie menu?"
+msgstr "Show extensions..."
 
 msgid "Show icon for new/unseen items"
 msgstr "Toon icon voor nieuwe/niet bekeken onderdelen"
@@ -6047,7 +6048,7 @@ msgid "Show message when recording starts"
 msgstr "Toon bericht wanneer opname begint"
 
 msgid "Show movie lengths in movielist"
-msgstr "Laat status-iconen zien in movielijst"
+msgstr "Show movie lengths in movielist"
 
 msgid "Show network mounts ..."
 msgstr "Toon netwerkmounts ..."
@@ -6083,7 +6084,7 @@ msgid "Show the list of AutoTimers."
 msgstr "Toon AutoTimers"
 
 msgid "Show the list of timers."
-msgstr "Toon AutoTimers"
+msgstr "Toon Timers"
 
 msgid "Show the media player..."
 msgstr "Toon media player..."
@@ -6155,7 +6156,7 @@ msgid "Single transponder"
 msgstr "Één transponder"
 
 msgid "SingleEPG settings"
-msgstr "Adapter instellingen"
+msgstr "Single EPG instellingen"
 
 msgid "Singlestep (GOP)"
 msgstr "Stap voor stap"
@@ -6400,7 +6401,7 @@ msgid "Stop testing plane after # successful transponders"
 msgstr "Stop testen na # succesvolle transponders"
 
 msgid "Stop timeshift"
-msgstr "Timeshift annuleren?"
+msgstr "Timeshift annuleren"
 
 msgid "Stop timeshift while recording?"
 msgstr "Stop Timeshift tijdens opname?"
@@ -6508,7 +6509,7 @@ msgid "Switch to next subservice"
 msgstr "Ga naar volgende subzender"
 
 msgid "Switch to previous channel"
-msgstr "Ga naar vorige subzender"
+msgstr "Ga naar vorige kanaal"
 
 msgid "Switch to previous channel in history"
 msgstr ""
@@ -7081,7 +7082,7 @@ msgid "Time/Date Input"
 msgstr "Tijd/Datum invoer"
 
 msgid "Timeline font size"
-msgstr "Ondertitel lettergrootte"
+msgstr "Tijdlijn lettergrootte"
 
 msgid "Timer Edit"
 msgstr "Timer bewerken"
@@ -7540,7 +7541,7 @@ msgid "Use time of currently running service"
 msgstr "Gebruik de tijd van de huidige zender"
 
 msgid "Use trash can in movielist"
-msgstr "Alle bestanden in de prullenbak nu permanent verwijderen?"
+msgstr "Gebruik de prullenbak in movielijst"
 
 msgid "Use trashcan in movielist"
 msgstr "Gebruik prullenbak in de opnamelijst"
