--- a/po/de.po
+++ b/po/de.po
@@ -7979,7 +7979,7 @@ msgstr ""
 "drücken."
 
 msgid "Use the wizard to set up basic features"
-msgstr ""
+msgstr "Den Wizard benutzen um Grundeinstellungen zu machen"
 
 msgid "Use these input device settings?"
 msgstr "Diese Einstellungen für Eingabegeräte benutzen?"
@@ -7994,7 +7994,7 @@ msgid "Use time of currently running service"
 msgstr "Benutze Zeit vom aktuell laufenden Programm"
 
 msgid "Use trash can in movielist"
-msgstr ""
+msgstr "Verwende Mülleimer in Filmliste"
 
 msgid "Use trashcan in movielist"
 msgstr "Verwende Mülleimer in Filmliste"
@@ -8015,7 +8015,7 @@ msgid "User interface"
 msgstr "Benutzeroberfläche"
 
 msgid "User name"
-msgstr ""
+msgstr "Benutzername"
 
 msgid "Username"
 msgstr "Benutzername"
@@ -8132,8 +8132,7 @@ msgid "View list of available CommonInterface extensions"
 msgstr "Eine Liste der verfügbaren Common Interface-Erweiterungen anzeigen."
 
 msgid "View list of available Display and Userinterface extensions."
-msgstr ""
-"Eine Liste der verfügbaren Display und Userinterface Erweiterungen anzeigen."
+msgstr "Eine Liste der verfügbaren Display und Userinterface Erweiterungen anzeigen."
 
 msgid "View list of available EPG extensions."
 msgstr "Eine Liste der verfügbaren EPG-Erweiterungen anzeigen."
@@ -8296,6 +8295,10 @@ msgid ""
 "This start wizard will guide you through the basic setup of your STB_BOX.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
+"Willkommen.\n"
+"\n"
+"Dieser Wizard wird Sie durch die Grundeinstellungen ihrer STB_BOX leiten.\n"
+"Drücke den OK Button um zum nächsten Schritt zu gelangen"
 
 msgid "Welcome..."
 msgstr "Willkommen..."
@@ -8328,6 +8331,8 @@ msgid ""
 "When enabled, a recording is allowed to interrupt live tv, when there are no "
 "free tuners."
 msgstr ""
+"Falls eingeschaltet, darf eine Aufnahme live TV unterbrechen,"
+"falls keine Tuner frei sind."
 
 msgid "When enabled, channel numbering will start at '1' for each bouquet."
 msgstr ""
@@ -8337,6 +8342,8 @@ msgid ""
 "When enabled, deleted recordings are moved to the trash can, instead of "
 "being immediately deleted."
 msgstr ""
+"Falls eingeschaltet, werden gelöschte Aufnahmen in den Mülleimer geschoben,"
+"anstatt direkt gelöscht zu werden"
 
 msgid ""
 "When enabled, external subtitles (in media files) will be displayed in "
@@ -8397,7 +8404,7 @@ msgid ""
 msgstr ""
 
 msgid "When enabled, use DHCP for the IP configuration."
-msgstr ""
+msgstr "Falls eingescgaltet, benutze DHCP für die IP Konfiguration."
 
 msgid ""
 "When enabled, use power measurement to detect when the rotor stops turning "
