fix typo error.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -7541,7 +7541,7 @@ msgid ""
 "Timeshift will only start when the start delay time has passed. This "
 "prevents numurous very short files when zapping."
 msgstr ""
-"Timeshift will only start when the start delay time has passed. Thois "
+"Timeshift will only start when the start delay time has passed. This "
 "prevents numerous very short files when zapping."
 
 msgid "Timeshift-Save Action on zap"
