fix typo (pptions-->options)

--- a/po/bg.po
+++ b/po/bg.po
@@ -581,7 +581,7 @@ msgid "Advanced options"
 msgstr "Експертни Настройки"
 
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Експертни Настройки"
 
 msgid "Advanced restore"
