--- a/po/cs.po
+++ b/po/cs.po
@@ -684,7 +684,7 @@ msgid "Advanced options"
 msgstr "Pokročilé možnosti"
 
 #
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Pokročilé možnosti"
 
 #
