--- a/po/da.po
+++ b/po/da.po
@@ -682,7 +682,7 @@ msgstr "Avancerede indstillinger"
 
 #
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Avancerede indstillinger"
 
 #
