--- a/po/de.po
+++ b/po/de.po
@@ -607,7 +607,7 @@ msgid "Advanced options"
 msgstr "Erweiterte Optionen"
 
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Erweiterte Optionen"
 
 msgid "Advanced restore"
