--- a/po/el.po
+++ b/po/el.po
@@ -794,7 +794,7 @@ msgstr "Προχωρημένες επιλογές"
 #
 #
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Προχωρημένες επιλογές"
 
 #
