--- a/po/en.po
+++ b/po/en.po
@@ -539,8 +539,8 @@ msgstr ""
 msgid "Advanced options"
 msgstr "Advanced options"
 
-msgid "Advanced pptions"
-msgstr "Advanced pptions"
+msgid "Advanced options"
+msgstr "Advanced options"
 
 msgid "Advanced restore"
 msgstr "Advanced restore"
