--- a/po/et.po
+++ b/po/et.po
@@ -588,7 +588,7 @@ msgid "Advanced options"
 msgstr "Lisavalikud"
 
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Lisavalikud"
 
 msgid "Advanced restore"
