--- a/po/fa.po
+++ b/po/fa.po
@@ -594,7 +594,7 @@ msgid "Advanced options"
 msgstr "گزینه های پیشرفته"
 
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "گزینه های پیشرفته"
 
 msgid "Advanced restore"
