--- a/po/fi.po
+++ b/po/fi.po
@@ -677,7 +677,7 @@ msgstr "Laajennetut valinnat"
 
 #
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Laajennetut valinnat"
 
 #
