--- a/po/fr.po
+++ b/po/fr.po
@@ -595,7 +595,7 @@ msgid "Advanced options"
 msgstr "Options Avancées"
 
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Options Avancées"
 
 msgid "Advanced restore"
