--- a/po/fy.po
+++ b/po/fy.po
@@ -678,7 +678,7 @@ msgstr "Afansjearre Fideo Ynstellingen"
 
 #
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Afansjearre Fideo Ynstellingen"
 
 #
