--- a/po/hu.po
+++ b/po/hu.po
@@ -611,7 +611,7 @@ msgid "Advanced options"
 msgstr "Haladó beállítások"
 
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Haladó beállítások"
 
 msgid "Advanced restore"
