--- a/po/is.po
+++ b/po/is.po
@@ -673,7 +673,7 @@ msgid "Advanced options"
 msgstr "Sérfræði stillingar"
 
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Sérfræði stillingar"
 
 msgid "Advanced restore"
