--- a/po/nl.po
+++ b/po/nl.po
@@ -611,7 +611,7 @@ msgid "Advanced options"
 msgstr "Geavanceerde opties"
 
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Geavanceerde opties"
 
 msgid "Advanced restore"
