--- a/po/pl.po
+++ b/po/pl.po
@@ -679,7 +679,7 @@ msgid "Advanced options"
 msgstr "Opcje zaawansowane"
 
 #
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Opcje zaawansowane"
 
 #
