--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -516,7 +516,7 @@ msgstr ""
 msgid "Advanced options"
 msgstr ""
 
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr ""
 
 msgid "Advanced restore"
