--- a/po/ro.po
+++ b/po/ro.po
@@ -588,7 +588,7 @@ msgid "Advanced options"
 msgstr "Optiuni avansate"
 
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Optiuni avansate"
 
 msgid "Advanced restore"
