--- a/po/sk.po
+++ b/po/sk.po
@@ -599,7 +599,7 @@ msgid "Advanced options"
 msgstr "Rozšírené voľby"
 
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Rozšírené voľby"
 
 msgid "Advanced restore"
