--- a/po/th.po
+++ b/po/th.po
@@ -582,7 +582,7 @@ msgid "Advanced options"
 msgstr "ตัวเลือกขั้นสูง"
 
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "ตัวเลือกขั้นสูง"
 
 msgid "Advanced restore"
