--- a/po/tr.po
+++ b/po/tr.po
@@ -687,7 +687,7 @@ msgstr "Gelişmiş seçenekler"
 
 #
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Gelişmiş seçenekler"
 
 #
