--- a/po/hr.po
+++ b/po/hr.po
@@ -669,7 +669,7 @@ msgstr "Napredne video postavke"
 
 #
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Napredne video postavke"
 
 #
