--- a/po/lt.po
+++ b/po/lt.po
@@ -590,7 +590,7 @@ msgid "Advanced options"
 msgstr "Išplėstiniai nustatymai"
 
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Išplėstiniai nustatymai"
 
 msgid "Advanced restore"
