--- a/po/lv.po
+++ b/po/lv.po
@@ -696,7 +696,7 @@ msgstr "Paplašinātās opcijas"
 
 #
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Paplašinātās opcijas"
 
 #
