--- a/po/no.po
+++ b/po/no.po
@@ -676,7 +676,7 @@ msgstr "Avansert Video Oppsett"
 
 #
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Avansert Video Oppsett"
 
 #
