--- a/po/sl.po
+++ b/po/sl.po
@@ -697,7 +697,7 @@ msgstr "Napredne nastavitve"
 
 #
 #, fuzzy
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Napredne nastavitve"
 
 #
