--- a/po/sv.po
+++ b/po/sv.po
@@ -685,7 +685,7 @@ msgid "Advanced options"
 msgstr "Avancerade Inställningar"
 
 #
-msgid "Advanced pptions"
+msgid "Advanced options"
 msgstr "Avancerade Inställningar"
 
 #
