remove duplicate messages (with case errors)

--- a/po/nl.po
+++ b/po/nl.po
@@ -2004,16 +2004,8 @@ msgstr "Downloaden"
 msgid "Download %s from server"
 msgstr "Donwloaden van %s van de server"
 
-msgid "Download .NFI-Files for USB-Flasher"
-msgstr "Download .NFI-Bestanden naar USB-Flasher"
-
-#, fuzzy
-msgid "Download .NFI-Files for USB-flasher"
-msgstr "Download .NFI-Bestanden naar USB-Flasher"
-
-#, fuzzy
 msgid "Download .NFI-files for USB-flasher"
-msgstr "Download .NFI-Bestanden naar USB-Flasher"
+msgstr "Download .NFI-Bestanden voor USB-flasher"
 
 #, fuzzy
 msgid "Download plugins"
