--- a/po/bg.po
+++ b/po/bg.po
@@ -2358,7 +2358,7 @@ msgstr ""
 
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "GUI трябва да се рестартира за да приложи новата кожа\n"
 "Да рестартирам ли GUI сега?"
