--- a/po/ca.po
+++ b/po/ca.po
@@ -2705,7 +2705,7 @@ msgstr ""
 #
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "Cal reengegar la IGU per activar la nova aparença\n"
 "Vols fer-ho ara?"
