--- a/po/cs.po
+++ b/po/cs.po
@@ -2707,7 +2707,7 @@ msgstr "Funkce tlačítka OK"
 #
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "Pro uplatnění skinu je potřeba restartovat GUI\n"
 "Chcete nyní restartovat GUI?"
