--- a/po/en.po
+++ b/po/en.po
@@ -1793,10 +1793,10 @@ msgstr "Function of OK button"
 
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 
 msgid "Gateway"
 msgstr "Gateway"
