--- a/po/is.po
+++ b/po/is.po
@@ -2611,7 +2611,7 @@ msgstr ""
 #
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "Gluggakerfi þarf að endurræsa til að virkja nýtt skinn\n"
 "Viltu endurræsa gluggakerfi núna?"
