--- a/po/no.po
+++ b/po/no.po
@@ -2751,7 +2751,7 @@ msgstr ""
 #
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "GUI skal restartes for aktivering av nytt skin\n"
 "Vil du restarte GUI nå?"
