--- a/po/pl.po
+++ b/po/pl.po
@@ -2717,7 +2717,7 @@ msgstr "Funkcie klawisza OK"
 #
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "GUI musi zostać zrestartowane, aby zastosować nowy skin\n"
 "Czy chcesz zrobić restart teraz?"
