--- a/po/sl.po
+++ b/po/sl.po
@@ -2857,7 +2857,7 @@ msgstr ""
 #
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "Za spremembo predloge je potrebno ponovno zagnati uporabniški vmesnik "
 "(GUI)!\n"
