--- a/po/sv.po
+++ b/po/sv.po
@@ -2752,7 +2752,7 @@ msgstr "Funktion på OK knappen"
 #
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "GUI måste startas om för nytt utseende\n"
 "Vill du starta om GUI nu?"
