--- a/po/tr.po
+++ b/po/tr.po
@@ -2807,7 +2807,7 @@ msgstr ""
 #
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "Yeni arayüzü etkinleştirmek için yeniden başlatma gerekiyor\n"
 "Grafik arayüzünü (GUI) yeniden başlatmak istiyor musunuz?"
