--- a/po/uk.po
+++ b/po/uk.po
@@ -2804,7 +2804,7 @@ msgstr ""
 #
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "Для застосування нового скіну\n"
 "потрібно перезавантажити GUI.\n"
