--- a/po/et.po
+++ b/po/et.po
@@ -2380,7 +2380,7 @@ msgstr ""
 
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "Kas taaskäivitada kasutajaliides\n"
 "uue välimuse aktiveerimiseks?"
