--- a/po/fi.po
+++ b/po/fi.po
@@ -2787,7 +2787,7 @@ msgstr ""
 #
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "Teema vaihtuu vasta kun laitteen\n"
 "käyttöliittymä on käynnistetty uudelleen.\n"
