--- a/po/it.po
+++ b/po/it.po
@@ -2795,7 +2795,7 @@ msgstr ""
 
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "L'attivazione della nuova skin richiede\n"
 "il riavvio di enigma2. Riavviare ora?"
