--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -2196,7 +2196,7 @@ msgstr ""
 
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 
 msgid "Gateway"
