--- a/po/ro.po
+++ b/po/ro.po
@@ -2371,7 +2371,7 @@ msgstr ""
 
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "Interfata grafica necesita repornirea pentru aplicarea noilor "
 "decoratiuniDoriti repornirea interfetei grafice acum?"
