--- a/po/ru.po
+++ b/po/ru.po
@@ -2797,7 +2797,7 @@ msgstr ""
 #
 msgid ""
 "GUI needs a restart to apply a new skin\n"
-"Do you want to Restart the GUI now?"
+"Do you want to restart the GUI now?"
 msgstr ""
 "Для активации нового скина необходимо перезагрузить GUI\n"
 "Хотите перезагрузить GUI сейчас?"
